tests/errors/trait-qualified-associated-missing-self.ari
trait Build {
  fn build(value: i64) -> Self
}

struct Box {
  value: i64,
}

impl Build for Box {
  fn build(value: i64) -> Box {
    Box { value: value }
  }
}

fn main() -> i64 {
  let box = Build::build(1);
  box.value
}
